# NIntegrate

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
examples/: 00_simple_polygon.py  01_polygon_with_hole.py  02_disk.py  03_moment_of_area.py  04_convergence.py  util.py
src/: domain1d.cc  domain1d.h  domain2d.cc  domain2d.h  interface_py.cc
